--- a/responsive.html
+++ b/responsive.html
@@ -7,14 +7,29 @@
     <title>Responsive Design</title>
   </head>
   <body>
-    <div id="petit">
-      <p>petit</p>
-    </div>
-    <div id="moyen">
-      <p>moyen</p>
-    </div>
-    <div id="grand">
-      <p>grand</p>
+    <div class="container">
+      <div class="small">
+        <h2>Phone adapted content</h2>
+        <p id="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quia perferendis soluta ipsam odio, nisi a optio dicta consequuntur deleniti magnam provident sint! Impedit earum aperiam facere atque omnis quaerat?</p>
+        <p id="para2">Optio ullam doloremque amet, ab animi non voluptates minus sunt quas modi perspiciatis velit, vero voluptatibus sint vel cumque! Modi cupiditate ipsam in mollitia alias nisi dolore quasi facere officiis.</p>
+        <p id="para3">Quisquam veniam perferendis voluptatem nemo eligendi enim odio at quod repudiandae, incidunt vero, sequi quasi necessitatibus vitae molestias numquam blanditiis natus esse in laudantium temporibus! Animi voluptatum possimus quisquam cupiditate?</p>
+      </div>
+      <div class="medium">
+        <h2>Tablet adapted content</h2>
+        <div class="paraContainer2">
+          <p id="para4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium provident quo ad perferendis labore molestiae, minus iusto aliquam officia officiis aut recusandae odio. Tenetur molestiae laudantium laborum neque doloremque provident.</p>
+          <p id="para5">Commodi in possimus explicabo odit, totam voluptatem, consequatur delectus culpa optio illo ad quae. Necessitatibus repudiandae labore odio non quam iusto saepe unde at quia sunt ex repellat, ducimus reprehenderit.</p>
+          <p id="para6">Rem, doloremque veniam debitis corporis quos natus necessitatibus dicta quod cum. Id commodi harum fuga praesentium, quibusdam non. Inventore quod eos eaque, consectetur at reprehenderit cumque commodi libero ea voluptas!</p>
+        </div>
+      </div>
+      <div class="large">
+        <h2>Desktop adapted content</h2>
+        <div class="paraContainer3">
+            <p id="para7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vero ipsum ab illum, aut corporis eum possimus suscipit fugit fuga exercitationem ex ipsam placeat doloribus ipsa quis nostrum eligendi qui.</p>
+            <p id="para8">Inventore quam eum ea doloribus enim consequatur natus aperiam! Aut, aperiam? Quod nisi blanditiis quam nobis ipsum tenetur quidem. Rem consequuntur quidem at facilis ad alias saepe nisi animi. Eligendi.</p>
+            <p id="para9">Sit voluptate sapiente iure aliquid obcaecati minima quam quis enim blanditiis nostrum commodi cupiditate, quidem inventore eveniet, labore id aliquam est harum? Officia maxime nobis fugiat ratione, quibusdam labore voluptates!</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
